fixed search box for auto suggestions to have z-index so nothing behind it bleeds into the suggestions box

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,6 +12,7 @@
 }
 
 .navSuggestions {
+  z-index: 1000;
   display: flex;
   flex-direction: column;
   position: absolute;
